--- a/Matrix Approximation.ipynb
+++ b/Matrix Approximation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
     }
    ],
    "source": [
-    "A = imread('tyrion.jpg') #imported the jpg\n",
+    "A = imread('images/tyrion.jpg') #imported the jpg\n",
     "print(A.shape)\n",
     "plt.imshow(A)\n",
     "plt.axis('off') #x-y axis disabled\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,8 @@
     }
    ],
    "source": [
-    "U, S, VT = np.linalg.svd(X, full_matrices = False) #full_matrices = False shows that we want to do the economy SVD\n",
+    "#full_matrices = False shows that we want to do the economy SVD\n",
+    "U, S, VT = np.linalg.svd(X, full_matrices = False) \n",
     "print(U.shape, S.shape, VT.shape)\n",
     "\n",
     "S = np.diag(S) # S was an array of eigenvalues it is nw become a diagonal matrix \n",
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,13 +195,6 @@
     "plt.title('Singular Values : Cumulative Sum')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
